--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,17 @@
 body {
   margin: 0;
+  background: #0a0a0a;
+}
+
+canvas {
+  padding: 0;
+  margin: auto;
+  display: block;
+  width: 800px;
+  height: 600px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
